--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
-CONFIG_ENV=config.env
+gCONFIG_ENV=config.env
 
 KERNEL_SOURCE=https://github.com/redcliff-op/android_kernel_xiaomi_phoenix.git
 KERNEL_SOURCE_BRANCH=R
@@ -18,9 +18,8 @@ CUSTOM_CLANG_BRANCH=
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 
 ## AOSP
-CLANG_BRANCH=main
-CLANG_VERSION=clang-r475365b
-
+CLANG_BRANCH=master
+CLANG_VERSION=https://github.com/kdrag0n/proton-clang.git
 # GCC
 ENABLE_GCC_ARM64=true
 ENABLE_GCC_ARM32=true
